--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <main>
             <Section id="about"  >
                 <div class=" about-container text-center" >
-                    <img src="images/photo.JPG" />
+                    <img src="Images/photo.JPG" />
                 </div>
                     <p class="description"> I Janvi Jaiswani as a beginner in IT sector, strive to associate myself with an organization
                          which will make best use of my skills,expand my knowledge and leverage my learnings.
